--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "positive-things",
   "version": "0.0.0",
   "scripts": {
+    "server": "node ./server/server.js",
     "ng": "ng",
-    "start": "ng serve",
+    "ng-serve": "ng serve",
+    "start": "npm-run-all --parallel server ng-serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
@@ -18,6 +20,8 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "method-override": "^3.0.0",
+    "node-fetch": "2.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -34,6 +38,7 @@
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
+    "npm-run-all": "^4.1.5",
     "typescript": "~4.6.2"
   }
 }
