--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
     "method-override": "^3.0.0",
+    "moment": "^2.29.3",
     "node-fetch": "2.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
